--- a/.om.mw
+++ b/.om.mw
@@ -1,15 +1,26 @@
 [[Fail:DotOm domain logo.png|thumb|right|200px|.om-domenan logotip.]]
-'''.om''' om [[Oman]]an [[DNS|Internet-domen]]. Se om avaitud [[1996. voz'|1996]]-nden voden 11. päiväl sulakud<ref>[http://iana.org/domains/root/db/om.html IANA — .om Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Komplimentarine domen om '''.عمان''' (.oman) vspäi 2010, se om [[araban kel'|arabankel'židen]] domennimiden täht.
+'''.om''' om [[Oman]]an [[DNS|Internet-domen]]. Se om avaitud [[1996. voz'|1996]]-nden voden 11. päiväl sulakud<ref>[http://iana.org/domains/root/db/om.html IANA — .om Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Komplimentarine domen om '''.عمان''' (.oman) vspäi 2012, se om [[araban kel'|arabankel'židen]] domennimiden täht.
 
-Edel 2014. vot registracii oli lasktud Omanan tobmuden organoile i valdkundaližile kompanijoile, sid' Omanan kaikile kompanijoile i personoile.
+Edel 2014. vot registracii oli lasktud Omanan tobmuden organoile i akkredituidud Omanas kompanijoile, sid' Omanan kaikile kompanijoile i personoile.
+
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''.co.om''', '''com.om''' — registriruidud Omanas kompanijad da edheotandad
+* '''.edu.om''' — kundaližed i privatižed opendusen aluzkundad
+* '''.gov.om''' — Omanan valdkundaližed organad
+* '''.med.om''' — valdkundaližed vai privatižed medicinižed kompanijad
+* '''.museum.om''' — valdkundaližed i privatižed institucijad, miččes valdoitas vai ohjatas Omanan muzejoil
+* '''.net.om''' — Omanan telekommunikacijoiden kompanijad
+* '''.org.om''' — lasktud Omanas päižed kommertižetomad organizacijad
+* '''.pro.om''' — licenziruidud Omanas profühtnendad i professionaližed associacijad.
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://ooredoo.om/Business/Connect/DomainRegistration.aspx Domenan registracijan üks' koumes saitaspäi (''ooredoo.om'').] {{ref-en}} {{ref-ar}}
+* [http://ooredoo.om/Business/Connect/DomainRegistration.aspx Domenan registracijan üks' nelläs saitaspäi (''ooredoo.om'').] {{ref-en}} {{ref-ar}}
 * [http://www.tra.gov.om/om-registry Domenan registracijan polhe «Telecommunications Regulatory Authority» saital (TRA Oman, domenan ohjandai, ''tra.gov.om'').] {{ref-en}} {{ref-ar}}
 * [http://iana.org/domains/root/db/om.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.om}}
 
 {{CcTLD}}
 
