*Empty MediaWiki Message*

--- a/.om.mw
+++ b/.om.mw
@@ -1,7 +1,7 @@
 [[Fail:DotOm domain logo.png|thumb|right|200px|.om-domenan logotip.]]
 '''.om''' om [[Oman]]an [[DNS|Internet-domen]]. Se om avaitud [[1996. voz'|1996]]-nden voden 11. päiväl sulakud<ref>[http://iana.org/domains/root/db/om.html IANA — .om Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Komplimentarine domen om '''.عمان''' (.oman) vspäi 2012, se om [[araban kel'|arabankel'židen]] domennimiden täht.
 
-Edel 2014. vot registracii oli lasktud Omanan tobmuden organoile i akkredituidud Omanas kompanijoile, sid' Omanan kaikile kompanijoile i personoile.
+Edel 2014. vot registracii oli lasktud Omanan tobmuden organoile i akkredituidud Omanas kompanijoile vaiše, sid' Omanan kaikile kompanijoile i personoile.
 
 Kahtenden tazopindan reglamentiruidud domenad:
 * '''.co.om''', '''com.om''' — registriruidud Omanas kompanijad da edheotandad
