--- a/.va.mw
+++ b/.va.mw
@@ -1,6 +1,6 @@
 '''.va''' om [[Vatikan]]an [[DNS|Internet-domen]]. Se om avaitud [[1995. voz'|1995]]-nden voden 11. päiväl sügüz'kud.<ref>[http://iana.org/domains/root/db/va.html IANA — .va Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
-Domen kävutase Vatikanan oficialižil aluzkundoil vaiše, sidä kesken e-počtan täht. Domenan ohjandai om «Department of Telecommunications — Vatican Internet Service Provider». Ei ole publišt registracijad nimiden täht.
+Domen kävutase Vatikanan oficialižil aluzkundoil vaiše, sidä kesken e-počtan täht. Domenan ohjandai om «Department of Telecommunications — Vatican Internet Service Provider». Ei ole publišt registracijad domennimiden täht. Oficialižed saitad oma registriruidud kahtendel tazopindal oikti.
 
 == Homaičendad ==
 <references/>
@@ -8,6 +8,7 @@ Domen kävutase Vatikanan oficialižil aluzkundoil vaiše, sidä kesken e-počta
 == Irdkosketused ==
 * [http://www.vatican.va/siti_va/index_va_en.htm Vatikanan saitoiden nimikirjutez ''vatican.va''-äikel'žel saital.] {{ref-en}}
 * [http://iana.org/domains/root/db/va.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.va}}
 
 {{CcTLD}}
 
