--- a/.va.mw
+++ b/.va.mw
@@ -1,12 +1,14 @@
 '''.va''' om [[Vatikan]]an [[DNS|Internet-domen]]. Se om avaitud [[1995. voz'|1995]]-nden voden 11. päiväl sügüz'kud.<ref>[http://iana.org/domains/root/db/va.html IANA — .va Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
-Domen kävutase Vatikanan oficialižil aluzkundoil vaiše. Registriruidas domennimid [[e-počt]]an täht enamba kaiked. Domenan ohjandai om «Department of Telecommunications — Vatican Internet Service Provider». Ei ole publišt registracijad domennimiden täht. Oficialižed saitad oma registriruidud kahtendel tazopindal oikti.
+Domen kävutase Vatikanan oficialižil aluzkundoil vaiše. Registriruidas domennimid [[e-počt]]an täht enamba kaiked. Domenan ohjandai om «Department of Telecommunications — Vatican Internet Service Provider», sponsor — Pühän Valdištmen Valdkundaline sekretariat ({{lang-la|Secretaria Status seu Papaplis}}).
+
+Ei ole publišt registracijad domennimiden täht .va-zonas. Oficialižed saitad oma registriruidud kahtendel tazopindal oikti.
 
 == Homaičendad ==
 <references/>
 
 == Irdkosketused ==
-* [http://www.vatican.va/siti_va/index_va_en.htm Vatikanan saitoiden nimikirjutez äikel'žel ''vatican.va''-saital.] {{ref-en}}
+* [http://www.vatican.va/siti_va/index_va_en.htm Vatikanan saitoiden nimikirjutez äikel'žel ''vatican.va''-saital.] {{ref-en}} (se-žo domennimiden registratoran sait)
 * [http://iana.org/domains/root/db/va.html IANA-informacii (''iana.org'').] {{ref-en}}
 {{Commons|Category:.va}}
 
