--- a/Villänkul'turad.mw
+++ b/Villänkul'turad.mw
@@ -1,10 +1,50 @@
 {{1000}}{{A10000}}
-[[Fail:Kytin-klas.jpg|thumb|right|250px|[[Nižu]] — üks' kaikiš tarbhembiš villänkul'turoišpäi.]]
+[[Fail:Kytin-klas.jpg|thumb|right|250px|[[Nižu]] — üks' kaikiš tarbhembiš villänkul'turoišpäi]]
 '''Villänkul'turad''' om kaikiš tarbhaižembiden [[kazmuz|kazmusiden]] grupp, kudamb andab [[jüvä]]d — [[ristit]]un [[söm|päsöndtavarad]] i torhust äjiden tegimišton sarakoile dai sötet maižanduzživatoiden täht.
 
 Kaikiš enamba levitadud villänkul'turad oma [[nižu]], [[ris]], [[kukuruz]], [[rugiž]], [[järgeline hirs'|hirs']], [[kagr]], [[greč]] i [[ozr]].
 
 Villän jüviden korged sötmižarvuz märičese sen mülündal (kuivan olendan andmused): hil'vezikod — 60..80%, vauktušed — 7..20%, fermentad, vitaminad (A, B1, B2, B6, PP).
+
+Tedo villän kazvatandas nimitase ''[[villänkazvatuz]]''.
+
+Zavottihe kazvatada villäd Lähižes Päivnouzmmas 12 tuhad vozid tagaz. Nened kazmused oma domestificiruidud ezmäižikš Kazvateližen Pol'kun maiš: nižu, ozr, herneh. Lugetas ozimsemendan kävutandad amuižiden indoevropalaižiden levigandusen süks.
+
+{|cellpadding=5
+|+ '''Villänkul'turoiden kaikiš järedambad kazvatajad (2018)'''<ref>[http://faostat.fao.org/site/567/default.aspx#ancor FAO:n statistik (''faostat.fao.org''), 2018.]</ref>
+|----- bgcolor=#DDDDDD
+! Rang
+! Valdkund
+! Lugumär, tonnad
+! rowspan=13 bgcolor=white |
+! Rang
+! Valdkund
+! Lugumär, tonnad
+|----- bgcolor=#EEEEEE
+|  1 ||{{CHN}} || style="text-align:right" |383 679 700 ||  13 || {{PAK}} || style="text-align:right" | 38 373 500
+|----- bgcolor=#EEEEEE
+|  2 ||{{USA}} || style="text-align:right" |319 810 449 ||  14 || {{THA}} || style="text-align:right" | 36 280 383
+|----- bgcolor=#EEEEEE
+|  3 || {{IND}} || style="text-align:right" |146 774 000 ||  15 || {{AUS}} || style="text-align:right" | 34 942 459
+|----- bgcolor=#EEEEEE
+|  4 || {{RUS}} ||  style="text-align:right" |95 079 470 ||  16 || {{TUR}} || style="text-align:right" | 33 569 627
+|----- bgcolor=#EEEEEE
+|  5 || {{IDN}} || style="text-align:right" |82 028 630 ||  17 || {{MMR}} || style="text-align:right" | 31 950 000
+|----- bgcolor=#EEEEEE
+|  6 || {{BRA}} || style="text-align:right" |71 288 144||  18 || {{MEX}} || style="text-align:right" | 31 675 966
+|----- bgcolor=#EEEEEE
+|  7 || {{FRA}} || style="text-align:right" |70 040 000 ||  19 || {{NGA}} || style="text-align:right" | 30 209 000
+|----- bgcolor=#EEEEEE
+|  8 || {{DEU}} || style="text-align:right" |49 748 185 ||  20 || {{POL}} || style="text-align:right" | 29 826 471
+|----- bgcolor=#EEEEEE
+|  9 ||{{CAN}} || style="text-align:right" |49 059 300 ||  … ||  ||
+|----- bgcolor=#EEEEEE
+|  10 ||{{BGD}} || style="text-align:right" |46 812 170 ||  50 || {{AUT}} || style="text-align:right" |5 141 838
+|----- bgcolor=#EEEEEE
+|  11 || {{UKR}} || style="text-align:right" |46 906 000 ||  102 || {{CHE}} || style="text-align:right" |1 006 326
+|----- bgcolor=#EEEEEE
+|  12 || {{VNM}} || style="text-align:right" |43 278 900 ||  || '''Kaik mail'mas''' || style="text-align:right" |'''2 489 301 668'''
+|}
 
 == Homaičendad ==
 <references />
