--- a/Villänkul'turad.mw
+++ b/Villänkul'turad.mw
@@ -11,7 +11,7 @@ Tedo villän kazvatandas nimitase ''[[villänkazvatuz]]''.
 Zavottihe kazvatada villäd Lähižes Päivnouzmmas 12 tuhad vozid tagaz. Nened kazmused oma domestificiruidud ezmäižikš Kazvateližen Pol'kun maiš: nižu, ozr, herneh. Lugetas ozimsemendan kävutandad amuižiden indoevropalaižiden levigandusen süks.
 
 {|cellpadding=5
-|+ '''Villänkul'turoiden kaikiš järedambad kazvatajad (2018)'''<ref>[http://faostat.fao.org/site/567/default.aspx#ancor FAO:n statistik (''faostat.fao.org''), 2018.]</ref>
+|+ '''Villänkul'turoiden kaikiš järedambad kazvatajad (2018)'''<ref>[https://web.archive.org/web/20181225154606/http://faostat.fao.org/site/567/default.aspx#ancor FAO:n statistik (''faostat.fao.org'') arhivas, 2018.]</ref>
 |----- bgcolor=#DDDDDD
 ! Rang
 ! Valdkund
