--- a/Villänkul'turad.mw
+++ b/Villänkul'turad.mw
@@ -11,7 +11,7 @@ Tedo villän kazvatandas nimitase ''[[villänkazvatuz]]''.
 Zavottihe kazvatada villäd Lähižes Päivnouzmmas 12 tuhad vozid tagaz. Nened kazmused oma domestificiruidud ezmäižikš Kazvateližen Pol'kun maiš: nižu, ozr, herneh. Lugetas ozimsemendan kävutandad amuižiden indoevropalaižiden levigandusen süks.
 
 {|cellpadding=5
-|+ '''Villänkul'turoiden kaikiš järedambad kazvatajad (2009)'''<ref>[https://www.fao.org/faostat/en/#data/QCL World cereal production (''Villänkul'turoiden mail'man tehmine'') (Crops > Items aggregated > Cereals, Total)''], [[Mail'man söndtavaroiden organizacii|FAO:n]] statistik ''fao.org''-saital.] {{ref-en}}</ref>
+|+ '''Villänkul'turoiden kaikiš järedambad kazvatajad (2009)'''<ref>[https://www.fao.org/faostat/en/#data/QCL  Villänkul'turoiden mail'man tehmine (World cereal production: Crops > Items aggregated > Cereals, Total)'', [[Mail'man söndtavaroiden organizacii|FAO:n]] statistik ''fao.org''-saital.] {{ref-en}}</ref>
 |----- bgcolor=#DDDDDD
 ! Rang
 ! Valdkund
