--- a/Villänkul'turad.mw
+++ b/Villänkul'turad.mw
@@ -10,40 +10,112 @@ Tedo villän kazvatandas nimitase ''[[villänkazvatuz]]''.
 
 Zavottihe kazvatada villäd Lähižes Päivnouzmmas 12 tuhad vozid tagaz. Nened kazmused oma domestificiruidud ezmäižikš Kazvateližen Pol'kun maiš: nižu, ozr, herneh. Lugetas ozimsemendan kävutandad amuižiden indoevropalaižiden levigandusen süks.
 
-{|cellpadding=5
-|+ '''Villänkul'turoiden kaikiš järedambad kazvatajad (2009)'''<ref>[https://www.fao.org/faostat/en/#data/QCL  Villänkul'turoiden mail'man tehmine (''World cereal production: Crops > Items aggregated > Cereals, Total''), [[Mail'man söndtavaroiden organizacii|FAO:n]] statistik ''fao.org''-saital.] {{ref-en}}</ref>
-|----- bgcolor=#DDDDDD
+Villän kazvatusen andmused alemba kirjutadud tabludes lugetas nenid kul'turoid: ozr, kagr, [[šon]], [[durr]], kukuruz, ris, rugiž i nižu.
+
+{| class="wikitable sortable"
+|+ '''Villänkul'turoiden kaikiš järedambad kazvatajad (2020)'''<ref>[https://www.fao.org/faostat/en/#data/QCL  Villänkul'turoiden mail'man tehmine (''World cereal production: Crops > Items aggregated > Cereals, Total''), [[Mail'man söndtavaroiden organizacii|FAO:n]] statistik ''fao.org''-saital.] {{ref-en}}</ref>
 ! Rang
 ! Valdkund
 ! Lugumär, tonnad
-! rowspan=13 bgcolor=white |
-! Rang
-! Valdkund
-! Lugumär, tonnad
-|----- bgcolor=#EEEEEE
-|  1 ||{{CHN}} || style="text-align:right" |383 679 700 ||  13 || {{PAK}} || style="text-align:right" | 38 373 500
-|----- bgcolor=#EEEEEE
-|  2 ||{{USA}} || style="text-align:right" |319 810 449 ||  14 || {{THA}} || style="text-align:right" | 36 280 383
-|----- bgcolor=#EEEEEE
-|  3 || {{IND}} || style="text-align:right" |146 774 000 ||  15 || {{AUS}} || style="text-align:right" | 34 942 459
-|----- bgcolor=#EEEEEE
-|  4 || {{RUS}} ||  style="text-align:right" |95 079 470 ||  16 || {{TUR}} || style="text-align:right" | 33 569 627
-|----- bgcolor=#EEEEEE
-|  5 || {{IDN}} || style="text-align:right" |82 028 630 ||  17 || {{MMR}} || style="text-align:right" | 31 950 000
-|----- bgcolor=#EEEEEE
-|  6 || {{BRA}} || style="text-align:right" |71 288 144||  18 || {{MEX}} || style="text-align:right" | 31 675 966
-|----- bgcolor=#EEEEEE
-|  7 || {{FRA}} || style="text-align:right" |70 040 000 ||  19 || {{NGA}} || style="text-align:right" | 30 209 000
-|----- bgcolor=#EEEEEE
-|  8 || {{DEU}} || style="text-align:right" |49 748 185 ||  20 || {{POL}} || style="text-align:right" | 29 826 471
-|----- bgcolor=#EEEEEE
-|  9 ||{{CAN}} || style="text-align:right" |49 059 300 ||  … ||  ||
-|----- bgcolor=#EEEEEE
-|  10 ||{{BGD}} || style="text-align:right" |46 812 170 ||  50 || {{AUT}} || style="text-align:right" |5 141 838
-|----- bgcolor=#EEEEEE
-|  11 || {{UKR}} || style="text-align:right" |46 906 000 ||  102 || {{CHE}} || style="text-align:right" |1 006 326
-|----- bgcolor=#EEEEEE
-|  12 || {{VNM}} || style="text-align:right" |43 278 900 ||  || '''Kaik mail'mas''' || style="text-align:right" |'''2 489 301 668'''
+|-
+|1
+|{{CHN}}
+|615,518,145
+|-						
+|2
+|{{USA}}
+|434,875,197
+|-
+|3
+|{{IND}}
+|335,035,000
+|-		
+|4
+|{{RUS}}
+|130,037,708
+|-
+|5
+|{{BRA}}
+|125,568,280
+|-
+|6
+|{{ARG}}
+|86,573,396
+|-
+|7
+|{{IDN}}
+|77,149,202
+|-
+|8
+|{{CAN}}
+|65,013,700
+|-
+|9
+|{{UKR}}
+|64,342,357
+|-
+|10
+|{{BGD}}
+|59,960,399
+|-
+|11
+|{{FRA}}
+|56,849,840
+|-
+|12
+|{{VNM}}
+|47,320,537
+|-
+|13
+|{{GER}}
+|43,265,100
+|-
+|14
+|{{PAK}}
+|42,540,915
+|-
+|15
+|{{TUR}}
+|37,184,688
+|-
+|16
+|{{MEX}}
+|36,375,198
+|-
+|17
+|{{THA}}
+|35,507,800
+|-
+|18
+|{{POL}}
+|34,865,080
+|-
+|19
+|{{ETH}}
+|30,248,751
+|-
+|20
+|{{NGA}}
+|28,672,504
+|-
+|21
+|{{MMR}}
+|27,552,568
+|-
+|22
+|{{PHL}}
+|27,413,963
+|-
+|23
+|{{ESP}}
+|27,320,900
+|-
+|24
+|{{AUS}}
+|26,613,793
+|-
+|'''Kaik mail'mas'''
+|'''2,489,301,668'''
 |}
 
 == Homaičendad ==
