--- a/Villänkul'turad.mw
+++ b/Villänkul'turad.mw
@@ -10,10 +10,10 @@ Tedo villän kazvatandas nimitase ''[[villänkazvatuz]]''.
 
 Zavottihe kazvatada villäd Lähižes Päivnouzmmas 12 tuhad vozid tagaz. Nened kazmused oma domestificiruidud ezmäižikš Kazvateližen Pol'kun maiš: nižu, ozr, herneh. Lugetas ozimsemendan kävutandad amuižiden indoevropalaižiden levigandusen süks.
 
-Villän kazvatusen andmused alemba kirjutadud tabludes lugetas nenid kul'turoid: ozr, kagr, [[šon]], [[durr]], kukuruz, ris, rugiž i nižu.
+Villän kazvatusen andmused alemba kirjutadud tabludes lugetas nenid kul'turoid: ozr, kagr, hirs', [[durr]], kukuruz, ris, rugiž i nižu.
 
 {| class="wikitable sortable"
-|+ '''Villänkul'turoiden kaikiš järedambad kazvatajad (2020)'''<ref>[https://www.fao.org/faostat/en/#data/QCL  Villänkul'turoiden mail'man tehmine (''World cereal production: Crops > Items aggregated > Cereals, Total''), [[Mail'man söndtavaroiden organizacii|FAO:n]] statistik ''fao.org''-saital.] {{ref-en}}</ref>
+|+ '''Villänkul'turoiden kaikiš järedambad kazvatajad<ref>[https://www.fao.org/faostat/en/#data/QCL  Villänkul'turoiden mail'man tehmine (''World cereal production: Crops > Items aggregated > Cereals, Total''), [[Mail'man söndtavaroiden organizacii|FAO:n]] statistik ''fao.org''-saital.] {{ref-en}}</ref> (2020)'''
 ! Rang
 ! Valdkund
 ! Lugumär, tonnad
@@ -115,7 +115,8 @@ Villän kazvatusen andmused alemba kirjutadud tabludes lugetas nenid kul'turoid:
 |26,613,793
 |-
 |'''Kaik mail'mas'''
-|'''2,489,301,668'''
+|
+|'''2,996,142,289'''
 |}
 
 == Homaičendad ==
