--- a/Villänkul'turad.mw
+++ b/Villänkul'turad.mw
@@ -113,6 +113,10 @@ Villän kazvatusen andmused alemba kirjutadud tabludes lugetas nenid kul'turoid:
 |24
 |{{AUS}}
 |26,613,793
+|- style="border-bottom:2px solid grey;"
+|…
+|
+|…
 |-
 |'''Kaik mail'mas'''
 |
