--- a/Villänkul'turad.mw
+++ b/Villänkul'turad.mw
@@ -8,8 +8,12 @@ Villän jüviden korged sötmižarvuz märičese sen mülündal (kuivan olendan 
 
 Tedo villän kazvatandas nimitase ''[[villänkazvatuz]]''.
 
-Zavottihe kazvatada villäd Lähižes Päivnouzmmas 12 tuhad vozid tagaz. Nened kazmused oma domestificiruidud ezmäižikš Kazvateližen Pol'kun maiš: nižu, ozr, herneh. Lugetas ozimsemendan kävutandad amuižiden indoevropalaižiden levigandusen süks.
+== Istorii ==
+Zavottihe kazvatada villäd Lähižes Päivnouzmmas 12 tuhad vozid tagaz. Nened kazmused oma domestificiruidud ezmäižikš Kazvateližen Pol'kun maiš: nižu, ozr, herneh.
 
+Lugetas ozimsemendan kävutandad amuižiden indoevropalaižiden levigandusen süks.
+
+== Mail'man kazvatuz ==
 Villän kazvatusen andmused alemba kirjutadud tabludes lugetas nenid kul'turoid: ozr, kagr, hirs', [[durr]], kukuruz, ris, rugiž i nižu.
 
 {| class="wikitable sortable"
@@ -128,5 +132,4 @@ Villän kazvatusen andmused alemba kirjutadud tabludes lugetas nenid kul'turoid:
 
 {{Commons|Cereal}}
 
-{{stub}}
 [[Kategorii:Villänkul'turad| ]]
