--- a/Stepanenko_Jelena.mw
+++ b/Stepanenko_Jelena.mw
@@ -1,8 +1,10 @@
 {{Personalii
 | изображение =
-| описание изображения = Elena Stepanenko
+| описание изображения = Jelena Stepanenko
 }}
-'''Elena Grigor'jevna Stepanenko''' ({{lang-ru|Елена Григорьевна Степаненко}}; sünd. [[8. sulaku]] [[1953]], [[Volgograd|Stalingrad]], [[Venäman NFST]], [[Nevondkundaline Ühtituz|NSTÜ]]) om nevondkundaline da venämalaine jumorist i aktris paginoiden žanras, ezineb vodespäi 1979. Om [[Petrosän Evgenii|Evgenii Petrosänan]] ak.
+'''Jelena Grigor'jevna Stepanenko''' ({{lang-ru|Елена Григорьевна Степаненко}}; sünd. [[8. sulaku]] [[1953]], [[Volgograd|Stalingrad]], [[Venäman NFST]], [[Nevondkundaline Ühtituz|NSTÜ]]) om nevondkundaline da venämalaine jumorist i aktris paginoiden žanras, Venäman teleoigendusiden riven vedai, runokirjutai. Vändi rolid severziš-se fil'miš, änetoiti mul'tfil'miden personažiden. Venäman arvostadud artist (1995).
+
+Vl 1971 Jelena sirdi Moskvha openumha GITIS:as. Ezineb vspäi 1979. [[Jevgenii Petrosän]]-artist oli hänen kahten muzikan hätken aigan (1985−2018).
 
 == Homaičendad ==
 <references/>
@@ -11,6 +13,8 @@
 [[Kategorii:NSTÜ:n aktrisad]]
 [[Kategorii:Venäman aktrisad]]
 [[Kategorii:Jumoristad]]
+[[Kategorii:Venäman TV-vedajad]]
 [[Kategorii:Aktrisad kirjamišton mödhe]]
+[[Kategorii:TV-vedajad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Volgogradha]]
