--- a/Stepanenko_Jelena.mw
+++ b/Stepanenko_Jelena.mw
@@ -2,9 +2,12 @@
 | изображение =
 | описание изображения = Jelena Stepanenko
 }}
-'''Jelena Grigor'jevna Stepanenko''' ({{lang-ru|Елена Григорьевна Степаненко}}; sünd. [[8. sulaku]] [[1953]], [[Volgograd|Stalingrad]], [[Venäman NFST]], [[Nevondkundaline Ühtituz|NSTÜ]]) om nevondkundaline da venämalaine jumorist i aktris paginoiden žanras, Venäman teleoigendusiden riven vedai, runokirjutai. Vändi rolid severziš-se fil'miš, änetoiti mul'tfil'miden personažiden. Venäman arvostadud artist (1995).
+'''Jelena Grigor'jevna Stepanenko''' ({{lang-ru|Елена Григорьевна Степаненко}}; sünd. [[8. sulaku]] [[1953]], [[Volgograd|Stalingrad]], [[Venäman NFST]], [[Nevondkundaline Ühtituz|NSTÜ]]) om nevondkundaline da venämalaine jumorist i aktris paginoiden žanras, Venäman teleoigendusiden riven vedai, runokirjutai. Ezineb vspäi 1979. Vändi rolid severziš-se fil'miš, änetoiti mul'tfil'miden personažid. Venäman arvostadud artist (1995).
 
-Vl 1971 Jelena sirdi Moskvha openumha GITIS:as. Ezineb vspäi 1979. [[Jevgenii Petrosän]]-artist oli hänen kahten muzikan hätken aigan (1985−2018).
+== Biografii ==
+Laps'aigan tuleban aigan aktris sportazi, oli otnus ujumaha.
+
+Vl 1971 Jelena sirdi Moskvha openumha GITIS:as, tuli sen muzikžanroiden akt'ormahtoiden fakul'tetha. Zavodi professionaližen aktrisan kar'jerad Moskvan estradan teatras vl 1979, siš vändi spektakliden rolid, parodirui tetabid akt'orid, pajati. Ezmäine Aleksandr Vasil'jev-mužik oli pianonvändajan i akkompanirui Stepanenkole aktrisan ezitusiden aigan, toi našt estradan scenale. [[Jevgenii Petrosän]]-artist oli Jelenan kahten mužikan hätken aigan (1985−2018).
 
 == Homaičendad ==
 <references/>
