--- a/Murmansk.mw
+++ b/Murmansk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Murmanskan lidnanznam
  | Flag text = Murmanskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 305,236
- | Voz' = 2015
+ | Eläjiden lugu = 282,851
+ | Voz' = 2021
  | Pind = 154.4
- | Fail = Коллаж Мурманск.png
- | Pämez' = Dmitrii Filippov (2016—)
+ | Fail = Murmansk, 2015-08-04, 2-04 AM - panoramio.jpg
+ | Pämez' = Igor' Morar'<br />(sulaku 2022—)
  | Telefonkod = +7-8152-xxx-xxx
  | Avtokod = 51
  | Aigvö = [[UTC]]+3 ([[MSK]]+0)
@@ -35,12 +35,23 @@ Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 307 257 ristitud. 
 
 Rahvahad (enamba 0,8% vl 2010, ozutadud rahvahudenke): [[venälaižed]] — 89,6%, [[ukrainalaižed]] — 4,6%, [[vaugedvenälaižed]] — 1,6%, [[totarlaižed]] — 0,8%, toižed rahvahad — 3,2%.
 
+Edeližed lidnan pämehed oma:
+* Dmitrii Filippov (tal'vku 2016 — sügüz'ku 2018);
+* Tamara Prämikova (sügüz'ku 2018 — reduku 2019, velgusentäutai vn 2021 sügüz'kuspäi vn 2022 keväz'kuhusai)
+* Andrei Sisoev (reduku 2019 — eloku 2021)
+* Mihail Belošejev (eloku−sügüz'ku 2021)
+
 == Galerei ==
 <gallery mode="packed" heights="125px">
 Здание администраций Мурманской области и Мурманска 2.jpg|Lidnan i agjan administracijoiden sauvuz (2009)
-Комплекс Свято-Никольского кафедрального собора 2.JPG|Ph. Mikulain kafedraližen päjumalanpertin kompleks, vn 2013 nägu
 Здание Мурманского морского пароходства.JPG|Murmanskan laivkompanijan sauvuz, 2013
-МГТУ.jpg|Murmanskan valdkundaline tehnine universitet, 2010-nded voded
+Комплекс Свято-Никольского кафедрального собора 2.JPG|Ph. Mikulain kafedraližen päjumalanpertin kompleks, vn 2013 nägu
+Мурманский судоремонтный завод.jpg|Murmanskan laivankohenduztegim vl 2015
+МГТУ.jpg|Murmanskan valdkundaline tehnine universitet, 2010-nded voded (ende ülämeriškol)
+Здание Дома культуры моряков.JPG|Merimehiden kul'turkeskuz (2013)
+О'КЕЙ. Март 2013 г. - panoramio.jpg|O'KEI-torguindkeskuz (2013)
+Универмаг Волна 2012.jpg|Universaline «Volna»-lauk (2012, ''Laineh'')
+Murmansk Port.jpg|Murmanskan meriport ühtennimižen karan randal, 2007. voz'
 Поезд № 15 и Мурманский вокзал.jpg|Murmanskan päraudtestancii vl 2009
 </gallery>
 
