--- a/Murmansk.mw
+++ b/Murmansk.mw
@@ -23,7 +23,9 @@ Murmansk om kaikiš suremb lidn [[Pohjoine polärine pird|Pohjoižen polärižen
 == Istorii ==
 Eländpunktan aluz om pandud vl 1916 redukun 4. päiväl kuti ''Romanov Murmanal'' ({{lang-ru|Романов-на-Мурмане}}) lidnan statusanke. [[Fevralin revolücii|Fevralin revolücijan]] jäl'ghe vn 1917 3. päiväl sulakud udesnimitihe lidnad ''Murmansk:aks''.
 
-Vl 1926 se oli pen' lidn 9 tuhad eläjanke. Sikš ku [[Nevondkundaline Ühtištuz|NSTÜ:le]] pidi säta ičeze port [[Jävaldmeri|Jävaldmeren]] randal varatoitmaha Pohjoižlaivištod, arktižid ekspedicijoid, [[Noril'sk]]an sauvomišt, ümbriradamha [[kala]]n püdod, ka sid' Murmansk šingotaškanzihe hotkas. Vodele 1939 lidnan ristitišt oli jo 119 tuhad ristitud. Lidn šingotase järedaks portaks i laivišton bazaks, kaik Venäman atomlaivad oma kirjutadud Murmanskan portas, mugažo sömtegimišton, metalližkonstrukcijoiden i geologijan edheotandoil.
+Vl 1926 se oli pen' lidn 9 tuhad eläjanke. Sikš ku [[Nevondkundaline Ühtištuz|NSTÜ:le]] pidi säta ičeze port [[Jävaldmeri|Jävaldmeren]] randal varatoitmaha Pohjoižlaivištod, arktižid ekspedicijoid, [[Noril'sk]]an sauvomišt, ümbriradamha [[kala]]n püdod, ka sid' Murmansk šingotaškanzihe hotkas. Vodele 1939 lidnan ristitišt oli jo 119 tuhad ristitud.
+
+Murmansk šingotase järedaks portaks<ref>[http://www.portmurmansk.ru/ Murmanskan meritorguindportan sait (''portmurmansk.ru'').] {{ref-ru}}</ref> i laivišton bazaks, kaik Venäman atomlaivad oma kirjutadud Murmanskan portas, mugažo sömtegimišton, metalližkonstrukcijoiden i geologijan edheotandoil.
 
 == Geografijan andmused ==
 Lidn sijadase [[Kolan pol'sar'|Kolan pol'saren]] pohjoižel randal, 50 m ü.m.t. keskmäižel korktusel. Murmansk seižub ''Murmanan randal'', [[Barencan meri|Barencan meren]] kaiken aigan jädumatoman [[Kolan laht]]en kall'oikahil randoil. Lidnan keskuz om lahten päivnouzmaižel randal. Vspäi 2005 avtotesild ühtenzoitab lahten randoid. Matkad avtotedme om läz 1380 km [[Piter]]ihesai da 1905 km [[Moskv]]hasai. Lidnad-kaimdajad seištas lahten randadme: [[Kol]] ani suviröunan taga i [[Severomorsk]] 7 kilometras pohjoižpäivnouzmaižen röunan taga.
@@ -37,9 +39,9 @@ Rahvahad (enamba 0,8% vl 2010, ozutadud rahvahudenke): [[venälaižed]] — 89,6
 
 Edeližed lidnan pämehed oma:
 * Dmitrii Filippov (tal'vku 2016 — sügüz'ku 2018);
-* Tamara Prämikova (sügüz'ku 2018 — reduku 2019, velgusentäutai vn 2021 sügüz'kuspäi vn 2022 keväz'kuhusai)
-* Andrei Sisoev (reduku 2019 — eloku 2021)
-* Mihail Belošejev (eloku−sügüz'ku 2021)
+* Tamara Prämikova (sügüz'ku 2018 — reduku 2019, velgusentäutai vn 2021 sügüz'kuspäi vn 2022 keväz'kuhusai);
+* Andrei Sisoev (reduku 2019 — eloku 2021);
+* Mihail Belošejev (eloku−sügüz'ku 2021).
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
