([[c:GR|GR]])  [[File:Flag of City of San Marino.png]] → [[File:Flag of the City of San Marino.svg]] vva

--- a/San_Marino_(lidn).mw
+++ b/San_Marino_(lidn).mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = San Marino<br />Città di San Marino
  | Lidnanznam = Coat of arms of the city of San Marino.svg
- | Flag = Flag of City of San Marino.png
+ | Flag = Flag of the City of San Marino.svg
  | Lidnanznam text = San Marino-lidnan znam
  | Flag text = San Marino-lidnan flag
  | Valdkund = San Marino
