--- a/San_Marino_(lidn).mw
+++ b/San_Marino_(lidn).mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = San Marino<br />Città di San Marino
- | Lidnanznam = Coat of arms of the city of San Marino.svg
+ | Lidnanznam = Città di San Marino coat.svg
  | Flag = Flag of the City of San Marino.svg
  | Lidnanznam text = San Marino-lidnan znam
  | Flag text = San Marino-lidnan flag
@@ -16,8 +16,12 @@
 [[Fail:San Marino San Marino.png|thumb|left|250px|San Marino da sen lidnankund valdkundan kartal]]
 '''San Marino-lidn''' ({{lang-it|Città di San Marino}}) om [[San Marino]]-valdkundan pälidn.
 
+== Istorii ==
 Eländpunktan aluz om pandud [[Pühä Marin|ph. Marinal]] vl 301. Vspäi 1932 elektrificiruidud raudte ühtenzoitab sidä italiženke [[Rimini]]-portanke [[Adriatine meri|Adriatižen meren]] randal, te om 32 km pitte.
 
+San Marino šingotase pälidnan funkcijoil.
+
+== Geografijan andmused ==
 Lidn sijadase Monte-Titano-ülüden pordhil, 697 m ü.m.t. keskmäižel korktusel. Klimat om Keskmeren.
 
 San Marino-lidnankund jagase seičemeks tulendaks.
