--- a/San_Marino_(lidn).mw
+++ b/San_Marino_(lidn).mw
@@ -14,7 +14,7 @@
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
 [[Fail:San Marino San Marino.png|thumb|left|250px|San Marino da sen lidnankund valdkundan kartal]]
-'''San Marino-lidn''' ({{lang-it|Città di San Marino}}) om [[San Marino]]-valdkundan pälidn.
+'''San Marino-lidn''' ({{lang-it|Città di San Marino}}) om [[San Marino]]-valdkundan pälidn. Se om [[San Marinon lidnankund]]an administrativine keskuz mugažo.
 
 == Istorii ==
 Eländpunktan aluz om pandud [[Pühä Marin|ph. Marinal]] vl 301. Vspäi 1932 elektrificiruidud raudte ühtenzoitab sidä italiženke [[Rimini]]-portanke [[Adriatine meri|Adriatižen meren]] randal, te om 32 km pitte.
@@ -39,4 +39,4 @@ Vl 2010 eläjiden lugu oli 4 106 ristitud 7,09 km² pindal.
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 [[Kategorii:San Marino|*]]
 [[Kategorii:Pälidnad]]
-[[Kategorii:San Marinon lidnankundad]]
+[[Kategorii:San Marinon lidnankund]]
