--- a/Mayhem.mw
+++ b/Mayhem.mw
@@ -15,7 +15,7 @@
 }}
 '''«Mayhem»''' om [[Norvegii|norvegine]] muzikgrupp, se edestab muzikad [[blekmetal]]-stiliš.
 
-Grupp om tehnus [[Oslo]]-lidnas ([[Norvegii]]) vl 1984.
+Grupp om tehnus [[Oslo]]-lidnas ([[Norvegii]]) vl 1984. Mayhem formirui aigališt norvegišt blekmetalscenad. Muzikgrupp sai skandališt tetabut kahten statjan tagut: Dead-vokalistan ičtazrikond vl 1991 i gruppan Euronymous-alusenpanijan rikond Varg Vikernes-basgitaristal vl 1993, sen jäl'ghe üks'jäine Necrobutcher jäi mülükundas. Sil-žo aigal ezmäižen studijanal'boman pästand oli vasttud arvostelijoil kut znamasine pozitivine muzikaline aigtego. Jäl'ghižed al'bomad oma eksperimentaližed völ enamba.
 
 == Mülükund ==
 === Nügüdläine mülükund ===
