--- a/Mayhem.mw
+++ b/Mayhem.mw
@@ -7,7 +7,7 @@
  | Valdkund = Norvegii
  | Lidn = Oslo
  | Kel' = [[anglijan kel'|anglijan]]
- | Leiblad = 
+ | Leiblad = [[Season of Mist]]
  | Toižed projektad = 
  | Mülükund = [[Necrobutcher]],<br />[[Jan Aksel Blomberg|Hellhammer]],<br />[[Attila Čihar]],<br />[[Morten Bergeton Iversen|Teloch]],<br />[[Čarl'z Hedger|Ghul]]
  | Eksühtnijad = 
@@ -15,6 +15,7 @@
 }}
 '''«Mayhem»''' om [[Norvegii|norvegine]] muzikgrupp, se edestab muzikad [[blekmetal]]-stiliš.
 
+== Istorii ==
 Grupp om tehnus [[Oslo]]-lidnas ([[Norvegii]]) vl 1984. Mayhem formirui aigališt norvegišt blekmetalscenad. Muzikgrupp sai skandališt tetabut kahten statjan tagut: Dead-vokalistan ičtazrikond vl 1991 i gruppan Euronymous-alusenpanijan rikond Varg Vikernes-basgitaristal vl 1993, sen jäl'ghe üks'jäine Necrobutcher jäi mülükundas. Sil-žo aigal ezmäižen studijanal'boman pästand oli vasttud arvostelijoil kut znamasine pozitivine muzikaline aigtego. Jäl'ghižed al'bomad oma eksperimentaližed völ enamba.
 
 == Mülükund ==
@@ -42,9 +43,6 @@ Grupp om tehnus [[Oslo]]-lidnas ([[Norvegii]]) vl 1984. Mayhem formirui aigališ
 * ''[[Ordo Ad Chao]]'' (2007, Haosan järgenduz)
 * ''[[Esoteric Warfare]]'' (2014, Ezoterine sodatö)
 * ''[[Daemon]]'' (2019, Demon)
-
-== Homaičendad ==
-<references/>
 
 == Irdkosketused ==
 * [http://www.thetruemayhem.com/ «Mayhem»-gruppan sait (''thetruemayhem.com'').] {{ref-en}}
