*Empty MediaWiki Message*

--- a/Mayhem.mw
+++ b/Mayhem.mw
@@ -3,7 +3,7 @@
  | Logo =
  | Foto = Mayhem - Jalometalli 2008 - 22.JPG
  | Žanrad = [[blekmetal]]
- | Voded = 1984–1993<br />1994—
+ | Voded = 1984–1993,<br />1994—
  | Valdkund = Norvegii
  | Lidn = Oslo
  | Kel' = [[anglijan kel'|anglijan]]
