--- a/Mar_Del'_Plat.mw
+++ b/Mar_Del'_Plat.mw
@@ -25,16 +25,15 @@ Lidn sijadase valdkundan i agjan päivnouzmas, 38 m ü.m.t. keskmäižel korktus
 
 Klimat om ven valdmeren. Kezakun-elokun keskmäine lämuz om +8..+9 C°, tal'vkun-uhokun +18..+20 C°. Voden keskmäine lämuz om +14 C°. Paneb sadegid 926 mm vodes, redukus-sulakus 85..95 mm kus. Voib panda halad kezakus-sügüz'kus tobjimalaz, kaikiš madalamb registriruidud lämuz om −9 C°. Il'massad [[Antarktik]]aspäi vajehtadas säd teravas miččen taht voz'aigan.
 
-Vn 2010 Argentinan rahvahanlugemižen mödhe lidnan eläjiden lugu oli 593 337 ristitud.
+== Eläjad ==
+Vn 2010 Argentinan rahvahanlugemižen mödhe lidnan eläjiden lugu oli 593 337 ristitud, 765 tuhad eläjid oli kaikes lidnaglomeracijas. Kaikiš suremb ristitišt om nügüd'.
 
-== Homaičendad ==
-<references />
+Mar Del' Platan nacionaline universitet (isp. lühenduz ''UNMdP'') radab vspäi 1962.
 
 == Irdkosketused ==
 * [http://mardelplata.gob.ar/ Lidnan oficialine sait (''mardelplata.gob.ar'').] {{ref-es}}
 {{Commons|Mar del Plata}}
 
-{{stub}}
 [[Kategorii:Argentinan lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 [[Kategorii:Buenos Airesan agj]]
