--- a/Glazunov_Il'ja.mw
+++ b/Glazunov_Il'ja.mw
@@ -11,6 +11,8 @@ Priha pördui Leningradha i openui čomamahtoližes keskškolas, sid' Leningrada
 
 Vspäi 1978 Glazunov radoi portretan radhonusen ohjandajan Moskvan čomamahtoližes institutas Surikovan nimed. Vl 1981 organizui Kaiken NSTÜ:n dekorativižen da rahvahaližen čomamahton muzejad Moskvas i kändihe sen direktoraks. Vspäi 1987 Venäman voimujupirdandan, skul'pturan i sauvondan akademii radab Moskvas, sätihe sidä Glazunovan iniciativan mödhe, hän oli sen rektoran vajehtusita. Vn 2004 31. päiväl elokud Moskvan valdkundaline Il'ja Glazunovan kuvagalerei om avaitud.
 
+Glazunov om mahapandud Novodevičii-jumalankodin kaumžomas (Moskv). Oli naižiš kahtišti, lapsed Ivan i Vera Glazunovad ezmäižes naimiželospäi, molembad oma pirdajad mugažo.
+
 == Homaičendad ==
 <references/>
 
