--- a/Rijek.mw
+++ b/Rijek.mw
@@ -25,7 +25,7 @@ Rijek om laivansauvomižen da turizman keskuz. Valdkundan kaikiš järedamb meri
 == Geografijan andmused ==
 Lidn sijadase [[Adriatine meri|Adriatižen meren]] randal, 0..499 m ü.m.t. korktusil. Matkad [[Zagreb]]hasai om 131 km pohjoižpäivnouzmha.
 
-Vl 2011 eläjiden lugu oli 128 624 ristitud, ezilidnoidenke — 245 tuhad ristitud.
+Vl 2011 eläjiden lugu oli 128 624 ristitud, ezilidnoidenke — 245 tuhad ristitud. Kaikiš suremb lidnan ristitišt oli 165 904 eläjad vl 1991.
 
 == Homaičendad ==
 <references />
