--- a/Užgorod.mw
+++ b/Užgorod.mw
@@ -9,30 +9,31 @@
  | Voz' = 2018-01-01
  | Pind = 41.56
  | Fail = Panorama of Uzhhorod.jpg
- | Pämez' = Bohdan Andrijiv<br />(kül'mku 2015—.<br />''Богдан Андріїв'')
+ | Pämez' = Bohdan Andrijiv<br />(kül'mku 2015—,<br />''Богдан Андріїв'')
  | Telefonkod = +380-312
  | Aigvö = tal'vel [[UTC]]+2,<br />kezal [[UTC]]+3
 }}
 '''Užgorod''' ({{lang-uk|Ужгород}}, {{lang-hu|Ungvár}}, {{lang-ro|Ujhorod}}, {{lang-yi|אונגװיר}}) om [[Ukrain]]an lidn valdkundan päivlaskmas. Se om [[Karpatantagaine agj|Karpatantagaižen agjan]] administrativine keskuz da kaikiš suremb lidn.
 
 == Istorii ==
-Eländpunktan aluz om pandud slavilaižiden ühtel heimoišpäi kuti lidnuz 9. voz'sadal. Sen-žo voz'sadan lopus mad'jaralaižed otiba lidnust vägel, i nimitihe lidnad ''Ungvar:aks'' («Ung-lidnuz») Ezmäižhe mail'man sodahasai, sid' nügüdläižikš. Om Ukrainan palaks vn 1945 kezakuspäi.
+Eländpunktan aluz om pandud slavilaižiden ühtel heimoišpäi kuti lidnuz 9. voz'sadal. Sen-žo voz'sadan lopus mad'jaralaižed otiba lidnust vägel, i nimitihe lidnad ''Ungvar:aks'' («Ung-lidnuz») Ezmäižhe mail'man sodahasai, sid' nügüdläižikš. Raudte ühtenzoiti Čop-stancijanke vl 1872. Lidn om Ukrainan palaks vn 1945 kezakuspäi.
 
 Užgorod šingotase torguindal i turizmal valdkundröunanno, elektroladimišton pästandal i mašinansauvomižel (avtoiden palad), meblin tehmižel i punümbriradmižel, omblendfabrikal, jomiden edheotandal, parfümerijan kompanijal.
 
 == Geografijan andmused ==
 Lidn sijadase agjan päivlaskmas, [[Slovakii|Slovakijan]] röunanno, Už-jogen randoil, 105..224 m korktusil, 120 m ü.m.t. keskmäižel korktusel, [[Karpatad|Karpatoiden]] ezimägištol. Matkad [[Kijev]]hasai om 785 km päivnouzmha-pohjoižpäivnouzmha.
 
+== Eläjad ==
 Vl 2015 eläjiden lugu oli 115,5 tuhad ristituid. Vll 1989−2015 lidnan ristitišt vajehtihe 115..117 tuhad röunoiš (126,5 tuh. rist. vl 1998).
 
-== Homaičendad ==
-<references />
+Rahvahad (2001): [[ukrainalaižed]] — 77,8 %, [[venänikad]] — 9,5 %, [[mad'jaralaižed]] — 7,0 %, [[slovakalaižed]] — 2,2 %, toižed rahvahad — 3,5 %.
+
+Užgorodan nacionaline universitet radab lidnas (alusenpanend 1945).
 
 == Irdkosketused ==
 * [http://rada-uzhgorod.gov.ua/ Lidnan Radan oficialine sait (''rada-uzhgorod.gov.ua'').] {{ref-uk}}
 {{Commons|Uzhhorod}}
 
-{{stub}}
 [[Kategorii:Ukrainan lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 [[Kategorii:Karpatantagaine agj|*]]
