--- a/Dižon.mw
+++ b/Dižon.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Dižon<br />Dijon
- | Lidnanznam = Blason ville fr Dijon (Côte-d'Or).svg
+ | Lidnanznam = Coats of Arms of Dijon.svg
  | Flag = 
  | Lidnanznam text = Dižonan lidnanznam
  | Flag text = 
