--- a/Dižon.mw
+++ b/Dižon.mw
@@ -9,8 +9,8 @@
  | Voz' = 2016
  | Pind = 40.41
  | Fail = Dijon - montage.jpg
- | Pämez' = Fransua Rebsamen<br/>(2001−2014.<br/>eloku 2015—)
- | Telefonkod = 
+ | Pämez' = Fransua Rebsamen<br/>(2001−2014,<br/>eloku 2015—,<br/>om valitud tošti 2020−2026 strokuks,<br/>''François Rebsamen'')
+ | Telefonkod = +33-
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
 '''Dižon''' ({{lang-fr|Dijon}} [diʒɔ̃]) om lidn da kommun [[Francii|Francijan]] päivnouzmas. Se om [[Burgundii — Franš-Konte]]-regionan i [[Kot-d'Or]]-departamentan administrativine keskuz.
