--- a/Dižon.mw
+++ b/Dižon.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Dižonan lidnanznam
  | Flag text = 
  | Valdkund = Francii
- | Eläjiden lugu = 155,090
- | Voz' = 2016
+ | Eläjiden lugu = 158,002
+ | Voz' = 2019
  | Pind = 40.41
  | Fail = Dijon - montage.jpg
  | Pämez' = Fransua Rebsamen<br/>(2001−2014,<br/>eloku 2015—,<br/>om valitud tošti 2020−2026 strokuks,<br/>''François Rebsamen'')
@@ -23,7 +23,7 @@ Dižon šingotase metallurgijan tegimel, farmaceftižil edheotandoil (Sanofi, Ur
 == Geografijan andmused ==
 Lidn sijadase [[Burgundijan kanal]]an randal, 210..410 m korktusil, 245 m ü.m.t. keskmäižel korktusel. Matkad [[Pariž]]hasai om 326 km lodeheze.
 
-Vl 2010 kommunan eläjiden lugu oli 151 212 ristitud.
+Vl 2010 kommunan eläjiden lugu oli 151 212 ristitud. Kaik 245 895 ristitud eliba lidnaglomeracijas vl 2018.
 
 == Irdkosketused ==
 * [http://dijon.fr/ Lidnan da kommunan oficialine sait (''dijon.fr'').] {{ref-fr}}
