--- a/Dižon.mw
+++ b/Dižon.mw
@@ -21,15 +21,17 @@ Eländpunkt oli strategine [[Rimalaine imperii|Rimalaižen imperijan]] aigan vö
 Dižon šingotase metallurgijan tegimel, farmaceftižil edheotandoil (Sanofi, Urgo, Groupe Fournier), optikan edheotandoil (Essilor, SAGEM, Nachet), kebnal tegimištol (vill- da puvillkanghad, nahkan ümbriradmine), sömtegimištol ([[Nestle]]-kompanijan šokoladfabrik, [[vin]]an pästandan edheotandad), tehtas mugažo [[buč]]id, [[špalerad|špalerid]], pakuitest ([[Tetra Pak]]-tegim) i avtopaloid. Saduiden da änikoiden kazvatuz kommunas.
 
 == Geografijan andmused ==
-Lidn sijadase [[Burgundijan kanal]]an randal, 210..410 m korktusil, 245 m ü.m.t. keskmäižel korktusel. Matkad [[Pariž]]hasai om 326 km lodeheze.
+Lidn sijadase [[Burgundijan kanal]]an randal, 210..410 m korktusil, 245 m ü.m.t. keskmäižel korktusel. Matkad [[Pariž]]hasai om 310 km lodeheze, [[Lion]]hasai om 190 km suvhe.
 
-Vl 2010 kommunan eläjiden lugu oli 151 212 ristitud. Kaik 245 895 ristitud eliba lidnaglomeracijas vl 2018.
+Klimat om valdmeren kontinentan valatoitandanke. Voden keskmäine lämuz om +10,9 C°, kaikiš lujemb pakaine oleli −22 C°. Paneb sadegid 760 mm vodes, kuidme tazomäras (86 mm semendkus).
+
+== Eläjad ==
+Vl 2010 lidnan-kommunan eläjiden lugu oli 151 212 ristitud. Kaik 245 895 ristitud eliba lidnaglomeracijas vl 2018.
 
 == Irdkosketused ==
 * [http://dijon.fr/ Lidnan da kommunan oficialine sait (''dijon.fr'').] {{ref-fr}}
 {{Commons|Dijon}}
 
-{{stub}}
 [[Kategorii:Francijan lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 [[Kategorii:Burgundii — Franš-Konte|*]]
