--- a/Dižon.mw
+++ b/Dižon.mw
@@ -13,12 +13,12 @@
  | Telefonkod = +33-
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
-'''Dižon''' ({{lang-fr|Dijon}} [diʒɔ̃]) om lidn da kommun [[Francii|Francijan]] päivnouzmas. Se om [[Burgundii — Franš-Konte]]-regionan i [[Kot-d'Or]]-departamentan administrativine keskuz.
+'''Dižon''' ({{lang-fr|Dijon}} [diʒɔ̃]) om lidn da kund (kommun) [[Francii|Francijan]] päivnouzmas. Se om [[Burgundii — Franš-Konte]]-regionan i [[Kot-d'Or]]-departamentan administrativine keskuz.
 
 == Istorii ==
-Eländpunkt oli strategine [[Rimalaine imperii|Rimalaižen imperijan]] aigan völ. [[Avrelian]]-imperator (ohjasti vll 270−275) käski sauda seinid žilos ümbri. Dižon sai lidnan oiktusid vl 1183. Oli Bugrundijan parlamentan sijaduseks Keskaigaspäi. Burgundijan universitet radab lidnas vspäi 1722 (27 tuhad üläopenikoid).
+Eländpunkt oli strategine [[Rimalaine imperii|Rimalaižen imperijan]] aigan völ. [[Avrelian]]-imperator (ohjasti vll 270−275) käski sauda seinid žilos ümbri. Dižon sai lidnan oiktusid vl 1183. Oli [[Burgundii|Burgundijan]] parlamentan sijaduseks Keskaigaspäi. Burgundijan universitet radab lidnas vspäi 1722 (27 tuhad üläopenikoid).
 
-Dižon šingotase metallurgijan tegimel, farmaceftižil edheotandoil (Sanofi, Urgo, Groupe Fournier), optikan edheotandoil (Essilor, SAGEM, Nachet), kebnal tegimištol (vill- da puvillkanghad, nahkan ümbriradmine), sömtegimištol ([[Nestle]]-kompanijan šokoladfabrik, [[vin]]an pästandan edheotandad), tehtas mugažo [[buč]]id, [[špalerad|špalerid]], pakuitest ([[Tetra Pak]]-tegim) i avtopaloid. Saduiden da änikoiden kazvatuz kommunas.
+Dižon šingotase [[metallurgii|metallurgijan]] tegimel, farmaceftižil edheotandoil (Sanofi, Urgo, Groupe Fournier), [[optik]]an edheotandoil (Essilor, SAGEM, Nachet), kebnal tegimištol (vill- da puvillkanghad, nahkan ümbriradmine), sömtegimištol ([[Nestle]]-kompanijan šokoladfabrik, [[vin]]an pästandan edheotandad), tehtas mugažo [[buč]]id, [[špalerad|špalerid]], pakuitest ([[Tetra Pak]]-tegim) i avtopaloid. Saduiden da änikoiden kazvatuz kommunas.
 
 == Geografijan andmused ==
 Lidn sijadase [[Burgundijan kanal]]an randal, 210..410 m korktusil, 245 m ü.m.t. keskmäižel korktusel. Matkad [[Pariž]]hasai om 310 km lodeheze, [[Lion]]hasai om 190 km suvhe.
@@ -26,7 +26,7 @@ Lidn sijadase [[Burgundijan kanal]]an randal, 210..410 m korktusil, 245 m ü.m.t
 Klimat om valdmeren kontinentan valatoitandanke. Voden keskmäine lämuz om +10,9 C°, kaikiš lujemb pakaine oleli −22 C°. Paneb sadegid 760 mm vodes, kuidme tazomäras (86 mm semendkus).
 
 == Eläjad ==
-Vl 2010 lidnan-kommunan eläjiden lugu oli 151 212 ristitud. Kaik 245 895 ristitud eliba lidnaglomeracijas vl 2018.
+Vl 2010 lidnan-kommunan eläjiden lugu oli 151 212 ristitud. Kaik 245 895 ristitud eliba lidnaglomeracijas vl 2018. Kaikiš suremb lidnan ristitišt oli 151 705 eläjad vl 1975 i om nügüd'.
 
 == Irdkosketused ==
 * [http://dijon.fr/ Lidnan da kommunan oficialine sait (''dijon.fr'').] {{ref-fr}}
